# rpf

./: Config.hs  LogMsg.hs  MailSpec.hs  Main.hs  Milter.hs  README  RPF.hs  Test.hs  rpf.cabal
Milter/: Base.hs  Env.hs  Log.hs  Switch.hs  Types.hs
RPF/: Domain.hs  Eval.hs  IP.hs  Lexer.hs  Parser.hs  State.hs  Types.hs
config/: rpf.conf  rpf.policy
data/: policy1
